--- a/Project.tex
+++ b/Project.tex
@@ -157,6 +157,30 @@ Structured data is usually stored and managed in relational databases with prede
  
 Unstructured data, in contrast, has its internal structure but it is not structured through pre-defined data models or schema. As it may comes in many different formats, it cannot be stored in relational databases which also becomes a real challenge for systems to process and analyse. The unstructured data may be stored within non-relational databases like NoSQL.
 
+\section{Challenges around Unstructured Data}
+ 
+There is a challenge in managing unstructured data due to the fact that many organisation collect significantly larger concentrations of unstructured information. This can be quite difficult and expensive to explore. Often structured data is created from unstructured data through various processing methods. By converting to structured data, the data can be universally understood by the ordinary user, easily digestible by data programs as well as having the ability to transfer to other data tools.
+
+When converting from unstructured data to structured data, the questions we often ask is what data do we wish to extract, is it a word count index or is it a particular feature, topic or sentiment? Then we want to explore what the structure look like. Is it key value pairs, JSON, XML, or Tabular? In the processing, we analyse the data and retrieve a structured metadata that augments the original data source. The alternative is to extract and clean the data if we already know what features we wish to extract. 
+
+1.     Identifying a Use Case
+
+Identifying the problem you are trying to solve is the first step of any successful data-driven initiative. This might be identifying the root cause of decreasing employee productivity or optimizing the sales process. Instead of mining information from terabytes of emails, call records, and documents, identify the information exchanges that are likely to contain key data about the sales process or employees’ performance.
+
+2.     Mining Value from Unstructured Data
+
+Just having access to relevant unstructured data is not enough. Enterprises must have the ability to extract data trapped within emails, customer calls, scanned documents, spreadsheets, and other types of unstructured sources. To achieve this, businesses need a data extraction tool with optical character recognition (OCR) and report mining capabilities that can automatically identify and extract meaningful information for faster decision-making.
+
+
+There are certainly tools that provide efficient report mining, text parsing, and OCR capabilities, the challenge, however, remains in integrating unstructured data with existing information systems.
+
+To get their head around unstructured data and use it to validate assumptions and support decision-making, businesses need a tool that can improve and automate their ability to extract unstructured data, as well as integrate it with databases, enterprise applications, and visualization tools. Finding an ideal data extraction solution may require some time and effort, but it will allow businesses to consolidate structured and unstructured data and give it a clear purpose beyond marketing and IT, for a more customer-focused approach across the organization.
+
+
+
+
+
+
 \chapter{MapReduce Framework}
 
 At present, with data being generated at an exponential rate, there is the need to deploy data intensive application and storage clusters in order to keep up with the amount of data. To handle such problem, Google developed the MapReduce programming model for distributed computing based on the Java language [5].
